menu position; fixed overlapping issue; footer padding;

--- a/styles/MenuToggler.css
+++ b/styles/MenuToggler.css
@@ -1,4 +1,7 @@
 .hamburger {
+  position: absolute;
+  right: 20px;
+  top: 40px;
   padding: 15px 15px;
   display: inline-block;
   cursor: pointer;
