--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,7 +192,7 @@ svg {
 
 @media (max-width: 500px) {
   .footer {
-    /* width: 120%; */
+    width: 105%;
   }
 }
 
